# skin_parser

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  env_template  package-lock.json  package.json  parser.db  pyproject.toml  weapon-max-value-list.txt
alembic/: env.py
alembic/versions/: 2024_07_17_1328-23d96199e2e5_init_of_db.py  2024_07_17_1605-dff7998e8c96_init_of_db.py
app/: logger.py  main.py
app/config/: __init__.py  constants.py  postgres.py  settings.py
app/db/: __init__.py  config.py
app/db/models/: active_parse.py  auth.py  parsed_items.py  skin_to_parse.py
app/lis/: client.js  constants.py  crud.py  dispatchers.py  factory.py  schemas.py  service.py  states.py  task_management.py  tasks.py  utils.py
app/lis/js_client/: client.js
app/telegram/: bot_config.py  buttons.py  dispatchers.py
config/: __init__.py  constants.py  settings.py
core/: __init__.py  db_config.py  env.py
db/: __init__.py  base.py  config.py  models.py  session_manager.py
db/models/: skins_model.py
html_requests/: requester.py
js_client/: Dockerfile  package-lock.json  package.json  ws_server.js
migrations/: env.py
migrations/versions/: 2025_04_14_1154-593d0b052d48_init.py  2025_05_03_1732-9bbb441abeee_new_models.py  2025_05_07_1434-4be105987d25_update.py  2025_05_07_1506-fe478b3853e7_init.py
src/db/: base.py
src/db/models/: __init__.py  base_model.py
