[tool.poetry]
name = "skin-parser"
version = "0.1.0"
description = "Web parser on Python."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["aiosqlite"], version = "^2.0.31"}
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
httpx = "^0.28.1"
aiogram = "^3.20.0"
websockets = "^15.0.1"
websocket = "^0.2.1"
centrifuge-python = "^0.4.0"
cent = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
