[tool.poetry]
name = "skin-parser"
version = "0.1.0"
description = "Web parser on Python."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
httpx = "^0.28.1"
aiogram = "^3.20.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.40"
websockets = "^15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
